[package]
name = "cryptrsa"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/neuralsorcerer/cryptrsa"
authors = ["Soumyadip Sarkar <soumyadip@soumyadipsarkar.com>"]
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
num-iter = "0.1"
num-integer = "0.1"
base64 = "0.13"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"