[package]
name = "cryptrsa"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/neuralsorcerer/cryptrsa"
authors = ["Soumyadip Sarkar <soumyadip@soumyadipsarkar.com>"]
readme = "README.md"
description = "RSA encryption and signing CLI tool"
license = "MIT"
keywords = ["rsa", "encryption", "cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/neuralsorcerer/cryptrsa"
documentation = "https://docs.rs/cryptrsa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
num-iter = "0.1"
num-integer = "0.1"
base64 = "0.13"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
rsa = "0.9"
pkcs8 = { version = "0.10", features = ["pem"] }
aes-gcm = "0.10"
anyhow = "1"

[dev-dependencies]
proptest = "1"